--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -2,29 +2,28 @@
 /* if you are using any Google fonts change the font names below to your fonts. 
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a & */
-@import url('https://fonts.googleapis.com/css2?family=IM+Fell+French+Canon&family=Lato:ital,wght@0,400;0,700;1,400&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Ysabeau&display=swap');
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #64e957d5   ;
-  --secondary-color: #2320ed ;
-  --accent1-color: #20ede9;
-  --accent2-color: rgb(255, 255, 255);
+  --primary-color: #2BA6B6;
+  --secondary-color: #1C0674;
+  --accent1-color: #16302B;
+  --accent2-color: #70798C;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "IM Fell French Canon";
-  --paragraph-font: Lato, Helvetica, sans-serif;
+  --heading-font: "Caveat Brush";
+  --paragraph-font: Ysabeau, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #396E94;  /* headlines on a white background */ 
-  --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #396E94  ;
-  --nav-link-color: #396E94;
-  --nav-background-color: #D4AC0D;
-  --nav-hover-link-color: white;
-  --nav-hover-background-color: #396E94;
+  --headline-color-on-white: #1C0674;  /* headlines on a white background */ 
+  --headline-color-on-color: #16302B; /* headlines on a colored background */ 
+  --paragraph-color-on-white: #1C0674; /* paragraph text on a white background */ 
+  --paragraph-color-on-color: #16302B; /* paragraph text on a colored background */ 
+  --paragraph-background-color: #2BA6B6  ;
+  --nav-link-color: #16302B;
+  --nav-background-color: #2BA6B6;
+  --nav-hover-link-color: #70798C;
+  --nav-hover-background-color: #1C0674;
 }
 
 
