--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -11,8 +11,8 @@ Fonts are separated by a & */
   --accent2-color: #70798C;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "Caveat Brush";
-  --paragraph-font: Ysabeau, Helvetica, sans-serif;
+  --heading-font: "Caveat Brush",Arial;
+  --paragraph-font: Ysabeau, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #1C0674;  /* headlines on a white background */ 
