--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,80 +1,154 @@
-content { 
+@import url('https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Ysabeau&display=swap');
+
+#content {
     max-width: 1600px;
     margin: 0 auto;
 }
-header{
+
+header {
     background-color: #2BA6B6;
 }
+
 nav a {
     text-align: center;
     color: #16302B;
     text-decoration: none;
+    font-family: "Caveat Brush", Garamond, Arial;
+    padding: 35px;
 }
+
 nav a:hover {
     background-color: #1C0674;
     color: #70798C
 }
-.home-title{
-   color: #16302B
-}
-#hero-img{
+
+#hero-img {
     width: 100%;
 }
+
 .button-box {
     text-align: center;
 }
+
 .home-title {
     text-align: center;
-    color:#1C0674
+    color: #1C0674;
+    font-family: "Caveat Brush", Garamond, Arial;
+    font-size: 2em;
+    margin-top: 10px;
 }
-h4{
+
+h4 {
     color: #1b3b35;
     text-align: center;
 }
+
 main section {
     text-align: center;
 }
+
+main section img {
+    box-sizing: border-box;
+}
+
 #background {
     height: 525px;
     background-color: #2BA6B6
 }
+
 body {
     background-color: #fbfcfc;
+    font-family: Ysabeau, Courier New, sans-serif;
+    font-size: 22px;
+    padding: 0;
+    margin: 0;
 }
-.logo, .icon{
+
+.logo,
+.icon {
     width: 80px;
 }
-.card-img,.mountains{
-    width: 40%;
+
+.icon {
+    padding-top: 10px;
 }
-.book, .join {
-    background-color: #2BA6B6;
+
+#logo_link {
+    padding-top: 5px;
+}
+
+.rivers-card,
+.camping-card,
+.rapids-card {
+    margin: 200px 0;
+
+}
+
+.card-img {
+    width: 40%;
+    border: 10px solid #70798C;
+}
+
+.mountains {
+    width: 40%;
+    margin: 100px 0;
+}
+
+h2 {
+    margin: 0;
+}
+
+.book,
+.join {
+    background-color: #18565e;
     color: white;
     text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
-.book:hover, .join:hover {
+
+.book:hover,
+.join:hover {
     background-color: #1C0674;
     color: #70798C
 }
+
 .msg {
     background-color: #2BA6B6;
+    line-height: 1.5em;
+    padding: 35px;
 }
-.msg h2{
-    color: #1b3b35
+
+.msg h2 {
+    color: #1b3b35;
+    font-family: "Caveat Brush", Garamond, Arial;
 }
-.msg p{
-    color: black
+
+.msg p {
+    color: black;
+    font-size: .8em;
+    padding-bottom: 15px;
 }
+
 footer {
-    background-color: #f5f8f8;
-    color:#1C0674
+    background-color: #70798C;
+    color: #1C0674;
+    padding: 25px 50px;
+    margin-top: 200px;
 }
-footer a{
-    color:#1b3b35;
+
+footer a {
+    color: #1b3b35;
     text-decoration: none;
 }
-footer a:hover{
-    color:#2BA6B6;
+
+footer a:hover {
+    color: #2BA6B6;
     text-decoration: underline;
-    
+}
+
+footer .social img {
+    padding-top: 15px;
 }
