--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,14 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Ysabeau&display=swap');
-
 #content {
     max-width: 1600px;
     margin: 0 auto;
 }
-
 header {
     background-color: #2BA6B6;
+    display:grid;
+    grid-template-columns: 150px auto;
 }
-
+nav {
+    display: flex;
+    justify-content: space-around;
+}
+#logo_link {
+    padding-top: 5px;
+    justify-self: center;
+    align-self: center;
+    padding-top: 5px;
+}
 nav a {
     text-align: center;
     color: #16302B;
@@ -16,46 +25,58 @@ nav a {
     font-family: "Caveat Brush", Garamond, Arial;
     padding: 35px;
 }
-
 nav a:hover {
-    background-color: #1C0674;
+    background-color: #18565e;
     color: #70798C
 }
-
+#hero{
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+#hero-box{
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
 #hero-img {
     width: 100%;
 }
-
+#hero-mesg{
+    grid-column: 2/3;
+    grid-row: 1/3;
+    margin-top: 100px;
+}
 .button-box {
     text-align: center;
 }
-
 .home-title {
     text-align: center;
-    color: #1C0674;
+    color:#2BA6B6;
     font-family: "Caveat Brush", Garamond, Arial;
     font-size: 2em;
     margin-top: 10px;
 }
-
 h4 {
-    color: #1b3b35;
+    color: white;
     text-align: center;
 }
-
+main {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+}
 main section {
     text-align: center;
 }
-
 main section img {
     box-sizing: border-box;
 }
-
 #background {
-    height: 525px;
-    background-color: #2BA6B6
+    height: 100%;
+    background-color: #18565e;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
-
 body {
     background-color: #fbfcfc;
     font-family: Ysabeau, Courier New, sans-serif;
@@ -63,41 +84,58 @@ body {
     padding: 0;
     margin: 0;
 }
-
 .logo,
 .icon {
     width: 80px;
 }
-
 .icon {
     padding-top: 10px;
 }
-
-#logo_link {
-    padding-top: 5px;
+.logo{
+    border-radius: 50%;
 }
-
 .rivers-card,
 .camping-card,
 .rapids-card {
     margin: 200px 0;
-
 }
-
 .card-img {
-    width: 40%;
+    width: 100%;
     border: 10px solid #70798C;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px black;
 }
-
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+.rivers-card{
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+.camping-card{
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+.rapids-card{
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
 .mountains {
-    width: 40%;
+    width: 100%;
     margin: 100px 0;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px black;
 }
-
-h2 {
-    margin: 0;
+.msg {
+    background-color: #2BA6B6;
+    line-height: 1.5em;
+    padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px black;
 }
-
 .book,
 .join {
     background-color: #18565e;
@@ -108,47 +146,78 @@ h2 {
     margin-top: 50px;
     border-radius: 5px;
 }
-
 .book:hover,
 .join:hover {
-    background-color: #1C0674;
+    background-color: #2BA6B6;;
     color: #70798C
 }
-
-.msg {
-    background-color: #2BA6B6;
-    line-height: 1.5em;
-    padding: 35px;
-}
-
 .msg h2 {
     color: #1b3b35;
     font-family: "Caveat Brush", Garamond, Arial;
+    margin: 0;
 }
-
 .msg p {
     color: black;
     font-size: .8em;
     padding-bottom: 15px;
 }
-
 footer {
-    background-color: #70798C;
-    color: #1C0674;
+    background-color: #898b91;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
-
 footer a {
     color: #1b3b35;
     text-decoration: none;
 }
-
 footer a:hover {
     color: #2BA6B6;
     text-decoration: underline;
 }
-
 footer .social img {
     padding-top: 15px;
+}
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
