--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -6,24 +6,24 @@ Fonts are separated by a & */
 :root {
   /* change the values below to your colors from your palette */
   --primary-color: #2BA6B6;
-  --secondary-color: #1C0674;
+  --secondary-color: #18565e;
   --accent1-color: #16302B;
   --accent2-color: #70798C;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "Caveat Brush",Arial;
-  --paragraph-font: Ysabeau, sans-serif;
+  --heading-font: "Caveat Brush",Garamond, Arial;
+  --paragraph-font: Ysabeau, Courier New, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #1C0674;  /* headlines on a white background */ 
+  --headline-color-on-white: #18565e;  /* headlines on a white background */ 
   --headline-color-on-color: #16302B; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #1C0674; /* paragraph text on a white background */ 
+  --paragraph-color-on-white: #18565e; /* paragraph text on a white background */ 
   --paragraph-color-on-color: #16302B; /* paragraph text on a colored background */ 
   --paragraph-background-color: #2BA6B6  ;
   --nav-link-color: #16302B;
   --nav-background-color: #2BA6B6;
   --nav-hover-link-color: #70798C;
-  --nav-hover-background-color: #1C0674;
+  --nav-hover-background-color: #18565e;
 }
 
 
